# eDrone

./: LICENSE  README.md  README.md(old)
src/eDrone/eDrone_lib/: CMakeLists.txt  package.xml
src/eDrone/eDrone_lib/inc/: GeoInfo.h  GeoUtils.h
src/eDrone/eDrone_lib/inc/eDrone_lib/: GeoInfo.h  GeoUtils.h  Vehicle.h  params.h  types.h
src/eDrone/eDrone_lib/include/eDrone_lib/: GeoUtils.h  Vehicle.h  params.h
src/eDrone/eDrone_lib/launch/: eDrone_lib.launch  test.launch
src/eDrone/eDrone_lib/msg/: Target.msg
src/eDrone/eDrone_lib/src/: (11061800)eDrone_control_node (또 다른 사본).cpp  (20190212) eDrone_control_node.cpp.bkp.cpp  .GeoUtils.cpp.swp  .eDrone_application_node.cpp.swp  .eDrone_control_node (또 다른 사본).cpp.swp  .eDrone_control_node.cpp.swn  .eDrone_control_node.cpp.swo  .eDrone_control_node.cpp.swp  .eDrone_monitoring_node.cpp.swp  .eDrone_utility_node.cpp.swp  .log0412_1.swp  .log0412_4.swp  .safety_node.cpp.swp  GeoInfo.cpp  GeoUtils.cpp  PathPlanning.cpp  Vehicle.cpp  eDrone_application_node (사본).cpp.bkp  eDrone_application_node.cpp  eDrone_application_node.cpp.bkp  eDrone_application_node.cpp.old  eDrone_autoflight_node.cpp  eDrone_control_node (3번째 사본).cpp  eDrone_control_node (4번째 사본).cpp  eDrone_control_node (또 다른 사본).cpp  eDrone_control_node (사본).cpp  eDrone_control_node (사본).cpp.bkp  eDrone_control_node (사본).cpp.bkp (이륙 고도 안정화 진행 중)  eDrone_control_node.cpp  eDrone_control_node.cpp.modified  eDrone_mavlink_node.cpp  eDrone_monitor_node.cpp  eDrone_safety_node.cpp  eDrone_utility_node.cpp  safety_node.cpp
src/eDrone/eDrone_lib/src/bkp/: eDrone_control_node.cpp  eDrone_monitor_node.cpp  eDrone_utility_node.cpp
src/eDrone/eDrone_lib/srv/: Survey_New.srv
src/eDrone/eDrone_lib/srv/bkp/: WaypointPush.srv
src/eDrone/eDrone_msgs/: CMakeLists.txt  package.xml
src/eDrone/eDrone_msgs/inc/eDrone_msgs/: hello.h
src/eDrone/eDrone_msgs/msg/: Geofence.msg  Heartbeat.msg  NoflyZone.msg  NoflyZones.msg  Phase.msg  Target.msg
src/eDrone/eDrone_msgs/src/: hello.cpp
src/eDrone/eDrone_msgs/srv/: CheckHome.srv  CheckPosition.srv  CheckState.srv  FollowPath.srv  Geofence.srv  GeofenceCheck.srv  GeofenceCheck.srv.bkp  GeofenceSet.srv  Goto.srv  Goto.srv.bkp  GotoPath.srv  GotoPath.srv.bkp  MissionAddItem.srv  MissionDownload.srv  ModeChange.srv  NoflyZoneCheck.srv  NoflyZoneCheck.srv.bkp  NoflyZoneCheck.srv.bkp2  NoflyZoneSet.srv  Orbit.srv  Orbit.srv.bkp  Survey.srv  SurveyArea.srv  SurveyPath.srv  Survey_New.srv  Takeoff.srv
src/eDrone/mission_lib_msgs/: CMakeLists.txt  package.xml
src/eDrone/mission_lib_msgs/srv/: CheckPosition.srv  CheckState.srv  Geofence.srv  MissionAddItem.srv  NoflyZone.srv  Survey.srv  Takeoff.srv
src/eDrone_examples/: CMakeLists (사본).txt.외부라이브러리링크  CMakeLists.txt  package (사본).xml  package.xml
src/eDrone_examples/inc/eDrone_examples/: params.h
src/eDrone_examples/launch/: ex_camera.launch  ex_check.launch  ex_geofence.launch  ex_goto.launch  ex_goto_global.launch  ex_goto_path.launch  ex_lib.launch  ex_mission.launch  ex_modeChange.launch  ex_noflyZone.launch  ex_path.launch  ex_spraying_mission.launch  ex_survey.launch  ex_survey_new.launch  ex_takeoff.launch  goto.launch  goto_global.launch  test.launch  ttt.launch
src/eDrone_examples/src/: (0716)ex_goto.cpp.bkp  .ex_check.cpp.swp  .ex_goto.cpp.swp  .ex_goto_path.cpp.swp  .ex_mission.cpp.swp  .ex_noflyZone.cpp.swo  .ex_noflyZone.cpp.swp  .ex_survey_new.cpp.swp  ex_camera.cpp  ex_check.cpp  ex_geofence.cpp  ex_goto.cpp  ex_goto.cpp.BKP  ex_goto.cpp.bkp  ex_goto_global.cpp  ex_goto_global.cpp.bkp  ex_goto_path.cpp  ex_lib.cpp  ex_mavlink.cpp  ex_mission.cpp  ex_modeChange.cpp  ex_noflyZone (bkp).cpp  ex_noflyZone.cpp  ex_simpleCheck.cpp  ex_simpleGeofence.cpp  ex_simpleGoto.cpp  ex_simpleMission.cpp  ex_simpleModeChange.cpp  ex_simpleNoflyZone.cpp  ex_simplePath.cpp  ex_simpleSurvey.cpp  ex_simpleTakeoff.cpp  ex_spraying_mission.cpp  ex_survey.cpp  ex_survey.cpp.old  ex_survey_new.cpp  ex_takeoff.cpp  ex_transport.cpp
src/eDrone_examples/src/bkp/: ex_goto.cpp  ex_simpleTakeoff.cpp
src/eDrone_examples/test/: test.c
src/examples/: .surveyTest0527.log.swp  0418_gotoPath_log01  0418_gotoPath_log02  0418_gotoPath_log03  0418_gotoPath_log04  0418_gotoPath_log05  0418_gotoPath_log06  0418_gotoPath_log07  0418_gotoPath_log08  0418_gotoPath_log09  0418_gotoPath_log10  0418_gotoPath_log11  0418_gotoPath_log12  0418_gotoPath_log13  0418_gotoPath_log14  0418_gotoPath_log15  0523logAutoflight  autoflight.sh  geofence.sh  gotoPath.sh  (+8 more)
src/examples/geofence1126/: CMakeLists.txt  package.xml
src/examples/geofence1126/inc/geofence1126/: params.h
src/examples/geofence1126/launch/: geofence1126.launch
src/examples/geofence1126/src/: ex_geofence1126.cpp
src/examples/survey1105/: CMakeLists.txt  package.xml
src/examples/survey1105/inc/survey1105/: params.h
src/examples/survey1105/launch/: survey1105.launch
src/examples/survey1105/src/: ex_survey1105.cpp
src/examples/tol0129/: CMakeLists.txt  package.xml
src/examples/tol0129/inc/tol0129/: params.h
src/examples/tol0129/launch/: tol0129.launch
src/examples/tol0129/src/: ex_tol0129.cpp
src/mission_examples/: CMakeLists.txt  package.xml
src/mission_examples/src/: ex_rucUAV.cpp  ex_simpleCheck.cpp  ex_simpleGeofence.cpp  ex_simpleGoto.cpp  ex_simpleMission.cpp  ex_simpleModeChange.cpp  ex_simpleNoflyZone.cpp  ex_simplePath.cpp  ex_simpleSurvey.cpp  ex_simpleTakeoff.cpp
src/mission_examples/src/bkp/: ex_simpleWaypoint (사본).cpp  ex_wpGeofence.cpp  ex_wpNoflyZone.cpp
src/mission_examples/src/bkp/PaxHeader/: ex_simpleWaypoint (_щ낯).cpp
src/mission_lib/: CMakeLists.txt  package.xml
src/mission_lib/launch/: mission_lib.launch
src/mission_lib/src/: Vehicle.h  mission_lib_agrc.cpp
src/mission_lib/srv/: MissionDownload.srv
src/template_tst/: CMakeLists.txt  _CMakeLists.txt.swp  _package.xml.swp  package.xml  package_old.xml
src/template_tst/inc/: params.h
src/template_tst/launch/: mission.launch  tst.launch
src/template_tst/src/: .mission.cpp.swp  .tst.cpp.swo  .tst.cpp.swp  exe_node.cpp.tmpl  mission.cpp  tst.cpp
(+218 files in other folders)
