<?xml version="1.0"?>

<!-- package format => version 2로 설정 -->
<package format="2">


  <name>eDrone_examples</name>

  <version> 0.0.1 </version>

  <description> Sample applications using Mission API </description>

  <maintainer email="moonmous@gmail.com">sooyoung.moon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>eDrone_msgs</depend>
  <depend>eDrone_lib</depend>


  <export>	

	<newfield> this is a new field </newfield> 
	<topics>

		<topic> </topic>
		<topic> </topic>
	</topics>

	<services> 
		<service> </service>
		<service> </service>
	</services>


  </export>

</package>
