<?xml version="1.0"?>
<package>

  <name>mission_examples</name>

  <version> 0.0.1 </version>

  <description> Sample applications using Mission API </description>

  <maintainer email="moonmous@gmail.com">sooyoung.moon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>mission_lib</buildtool_depend>

  <run_depend>roscpp</run_depend> 
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mission_lib</run_depend>
</package>
