<?xml version="1.0"?> 
<package format="2"> 
<name> template_tst</name> 
<version>  0.0.1 </version> 
<description> Project Description </description> 
<maintainer email= "moonmous@gmail.com"> sooyoungmoon </maintainer>  -->
<license> License </license>  
<buildtool_depend>catkin</buildtool_depend> 
<depend> rospy </depend>  
<depend> roscpp </depend> 
<depend> eDrone_msgs </depend> 
<depend> std_msgs </depend>  
<depend> message_generation </depend> 
<depend> mavros_msgs </depend>  

<!--<export> </export>-->
</package>
